gcc/testsuite/rust/rustc/ui/issues/issue-53712.rs
// issue #53712: make the error generated by using tuple indexing on an array more specific

fn main() {
    let arr = [10, 20, 30, 40, 50];
    arr.0;
// { dg-error ".E0609." "" { target *-*-* } .-1 }
// { help ".E0609." "" { target *-*-* } .-2 }
// { suggestion ".E0609." "" { target *-*-* } .-3 }
}

